--- a/INDEShippingCalculator/appsettings.json
+++ b/INDEShippingCalculator/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=167.235.136.233;Database=INDEShippingDB;User Id=sa;Password=qwer12#$;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
