--- a/INDEShippingCalculator/appsettings.json
+++ b/INDEShippingCalculator/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=167.235.136.233;Database=INDEShippingDB;User Id=sa;Password=qwer12#$;"
+    "DefaultConnection": "Server=167.235.136.233;Database=INDEShippingDB;User Id=sa;Password=qwer12#$;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
